<resources>
    <string name="app_name">Books</string>
    <string name="book_details_static">Detalhes do livro (estático)</string>
    <string name="book_details_dinamic">Detalhes do livro (dinâmico)</string>
    <string name="send_email">Enviar E-mail</string>
    <string name="title_">Título:</string>
    <string name="serie_">Série:</string>
    <string name="author_">Autor:</string>
    <string name="year">Ano:</string>
    <string name="cover">Capa</string>
    <string name="Email">Email</string>
    <string name="book_list">Lista de livros</string>
    <string name="ndOpen">Open</string>
    <string name="ndClose">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menuSearch">Pesquisar Livros</string>
</resources>
